# c-monorepo

./: .gitignore  CMakeLists.txt  CMakePresets.json  fibonacci.c  fibonacci.h  hello.c  hello_server.c  hello_server.h  prompt.c  vcpkg.json
fibonacci/: fibonacci.c
server/: hello_server.c
utils/: prompt.h  trim.c  trim.h
